Updates to HUD, crosshair, and radar

--- a/misc.cfg
+++ b/misc.cfg
@@ -1,8 +1,14 @@
-cl_showfps 1 //display fps
-fps_max "999" //200 default
+//cl_showfps 1 //display fps
+fps_max "300" //200 default
+cl_righthand 0 //weapon left
 
 cl_interp "0" //no blood if bullets didn't touch
 cl_interp_ratio "1"
 cl_cmdrate "128" //128 ticks
 cl_updaterate "128" //128 ticks
 rate "104000" //network optimization
+
+//Change radar with -/+
+bind "KP_plus" "incrementvar cl_radar_scale 0.25 1.0 0.05";
+bind "KP_minus" "incrementvar cl_radar_scale 0.25 1.0 -0.05";
+cl_radar_always_centered 0;
