--- a/misc.cfg
+++ b/misc.cfg
@@ -12,3 +12,7 @@ rate "104000" //network optimization
 bind "KP_plus" "incrementvar cl_radar_scale 0.25 1.0 0.05";
 bind "KP_minus" "incrementvar cl_radar_scale 0.25 1.0 -0.05";
 cl_radar_always_centered 0;
+
+//BHOP
+unbind "mwheelup"
+bind "mwheeldown" "+jump"
