--- a/misc.cfg
+++ b/misc.cfg
@@ -13,6 +13,18 @@ bind "KP_plus" "incrementvar cl_radar_scale 0.25 1.0 0.05";
 bind "KP_minus" "incrementvar cl_radar_scale 0.25 1.0 -0.05";
 cl_radar_always_centered 0;
 
+//Allow others to join me on community servers
+cl_join_advertise 2
+
 //BHOP
 unbind "mwheelup"
 bind "mwheeldown" "+jump"
+
+//no fancy music
+cl_disablehtmlmotd 1
+
+// Toggle fuckers
+bind "F9" "voice_chat" 
+alias "voice_chat" "chat_1"
+alias "chat_1" "voice_enable 1; echo Voice on; alias voice_chat chat_0"
+alias "chat_0" "voice_enable 0; echo Voice off; alias voice_chat chat_1"
